# Livediff

./: .editorconfig  .gitattributes  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  SECURITY.md  cassette.tape  demo.html  demo.tape  install.sh  livediff.desktop  rename.py  rustfmt.toml  scratch.rs  skills-lock.json
.agents/: developer-audience-context.md
.git.bak/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git.bak/hooks/: commit-msg  pre-commit
.git.bak/logs/refs/heads/: master
.git.bak/objects/pack/: pack-cfd629f56cf13b366c93aa7dae4dcbfcf29fda4f.idx  pack-cfd629f56cf13b366c93aa7dae4dcbfcf29fda4f.pack  pack-cfd629f56cf13b366c93aa7dae4dcbfcf29fda4f.rev
.git.bak/refs/remotes/gitlab/: master
.git.bak/refs/remotes/origin/: master
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: awesome-rust-check.yml  ci.yml  release.yml
docs/: index.html  use-cases.md
docs/marketing/: README.md  api-automation.md  api-run-status.json  audience-and-positioning.md  devto-article.md  github-growth-plan.md  launch-calendar.md  post-bank.md  reddit-playbook.md
scripts/: marketing_api.py
src/: app.rs  cli.rs  main.rs  ui.rs  watcher.rs
src/adapters/: cli.rs  fs_adapter.rs  mod.rs  watcher.rs
src/adapters/ui/: diff_view.rs  file_list.rs  footer.rs  header.rs  logs.rs  mod.rs  popups.rs  stats.rs
src/app/: app_tests.rs
src/domain/: diff_engine.rs  entities.rs  ignore_engine.rs  mod.rs  value_objects.rs  watcher_session.rs
src/domain/interfaces/: ports.rs
src/infrastructure/: logging.rs  mod.rs  terminal.rs
src/use_cases/: mod.rs  process_file_change.rs
(+3 files in other folders)
