[package]
name = "livediff"
version = "0.2.0"
edition = "2024"
authors = ["Antonin Nivoche <antonin.niv@gmail.com>"]
description = "Real-time file monitoring with beautiful diff visualization in the terminal."
repository = "https://github.com/SoCkEt7/Livediff"
homepage = "https://socket7.github.io/Livediff/"
license = "MIT OR Apache-2.0"
keywords = ["cli", "tui", "monitoring", "diff", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
# TUI and Terminal
ratatui = "0.30.0"
crossterm = "0.29.0"
tui-shimmer = "0.1"
ratatui-code-editor = "0.0.4"
tui-overlay = "0.1.2"
tui-big-text = "0.8.4"

# Async and File System
tokio = { version = "1.49.0", features = ["full"] }
notify = "8.2.0"
globset = "0.4.18"
ignore = "0.4.25"

# Diff and Parsing
similar = "2.7.0"
syntect = { version = "5.2.0", default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "regex-fancy"] }
chrono = "0.4.44"

# CLI and Config
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling and Logs
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"

[lints.rust]
future-incompatible = "warn"
nonstandard_style = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = 1 }
redundant_clone = { level = "deny", priority = 2 }
pedantic = { level = "allow", priority = 3 }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
